tests/cases/fail/chars_helper_arg_type.p4
import chars

def main() -> None:
    print(chars.is_digit("7"))
